syntax = "proto3";

option go_package = "/api/";

service User {
  //添加用户
  rpc AddUser(AddUserReq) returns (AddUserReply) {}
}

message AddUserReq {
  UserInfo user = 1;
}

message UserInfo {
  string name = 1;
  int32 age = 2;
}

message AddUserReply {}