syntax = "proto3";

option go_package = "/api/";
import "google/api/annotations.proto";

service User {
  //获取用户列表
  rpc GetUserList(GetUserListReq) returns (GetUserListReply) {
    option (google.api.http) = {
      get: "/user/list"
      body: "*"
      additional_bindings:[
        {custom:{kind:"Content-Type", path:"application/json"}}]
    };
  }
  //获取单个用户信息
  rpc GetUserInfo(GetUserInfoReq) returns (GetUserInfoReply) {
    option (google.api.http) = {
      get: "/users/{uid}/info"
      body: "*"
      additional_bindings:[
        {custom:{kind:"Content-Type", path:"application/json"}}]
    };
  }
}

message GetUserListReq {
  string name = 1;
  int32 age = 2;
}

message GetUserListReply {
  int32 code = 1;
  string msg = 2 ;
  repeated UserInfo list = 3;
}

message GetUserInfoReq {
  string name = 1;
  int32 age = 2;
}

message GetUserInfoReply {
  int32 code = 1;
  string msg = 2 ;
  UserInfo info = 3;
}

message UserInfo {
  string name = 1;
  int32 age = 2;
}